--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -17,6 +17,8 @@
 
 <resources>
 
+    <!-- THEME DARK -->
+
     <style name="Alp.42447968.BaseTheme.Dark" parent="@android:style/Theme" />
 
     <style name="Alp.42447968.BaseThemeHelper.Dark" parent="@style/Alp.42447968.BaseTheme.Dark" />
@@ -35,6 +37,8 @@
         <item name="alp_42447968_color_lock_pattern_view_success">@color/alp_42447968_lock_pattern_view_success_light</item>
         <item name="alp_42447968_color_lock_pattern_view_error">@color/alp_42447968_lock_pattern_view_error_light</item>
     </style>
+
+    <!-- THEME LIGHT -->
 
     <style name="Alp.42447968.BaseTheme.Light" parent="@android:style/Theme.Light" />
 
@@ -55,6 +59,8 @@
         <item name="alp_42447968_color_lock_pattern_view_error">@color/alp_42447968_lock_pattern_view_error_dark</item>
     </style>
 
+    <!-- THEME LIGHT, DARK ACTION BAR -->
+
     <style name="Alp.42447968.BaseTheme.Light.DarkActionBar" parent="@android:style/Theme.Light" />
 
     <style name="Alp.42447968.BaseThemeHelper.Light.DarkActionBar" parent="@style/Alp.42447968.BaseTheme.Light.DarkActionBar" />
@@ -73,6 +79,8 @@
         <item name="alp_42447968_color_lock_pattern_view_success">@color/alp_42447968_lock_pattern_view_success_dark</item>
         <item name="alp_42447968_color_lock_pattern_view_error">@color/alp_42447968_lock_pattern_view_error_dark</item>
     </style>
+
+    <!-- THEME DIALOG DARK -->
 
     <style name="Alp.42447968.BaseTheme.Dialog.Dark" parent="@android:style/Theme.Dialog">
 
@@ -93,6 +101,8 @@
         <item name="alp_42447968_color_lock_pattern_view_success">@color/alp_42447968_lock_pattern_view_success_light</item>
         <item name="alp_42447968_color_lock_pattern_view_error">@color/alp_42447968_lock_pattern_view_error_light</item>
     </style>
+
+    <!-- THEME DIALOG LIGHT -->
 
     <style name="Alp.42447968.BaseTheme.Dialog.Light" parent="@android:style/Theme.Light">
 
@@ -123,6 +133,22 @@
         <item name="alp_42447968_color_lock_pattern_view_success">@color/alp_42447968_lock_pattern_view_success_dark</item>
         <item name="alp_42447968_color_lock_pattern_view_error">@color/alp_42447968_lock_pattern_view_error_dark</item>
     </style>
+
+    <!-- THEME DIALOG WHEN LARGE, LIGHT -->
+
+    <style name="Alp.42447968.BaseTheme.DialogWhenLarge.Light" parent="@style/Alp.42447968.Theme.Light"></style>
+
+    <style name="Alp.42447968.BaseThemeHelper.DialogWhenLarge.Light" parent="@style/Alp.42447968.BaseTheme.DialogWhenLarge.Light"></style>
+
+    <style name="Alp.42447968.Theme.DialogWhenLarge.Light" parent="@style/Alp.42447968.BaseThemeHelper.DialogWhenLarge.Light"></style>
+
+    <!-- THEME DIALOG WHEN LARGE, DARK -->
+
+    <style name="Alp.42447968.BaseTheme.DialogWhenLarge.Dark" parent="@style/Alp.42447968.Theme.Dark"></style>
+
+    <style name="Alp.42447968.BaseThemeHelper.DialogWhenLarge.Dark" parent="@style/Alp.42447968.BaseTheme.DialogWhenLarge.Dark"></style>
+
+    <style name="Alp.42447968.Theme.DialogWhenLarge.Dark" parent="@style/Alp.42447968.BaseThemeHelper.DialogWhenLarge.Dark"></style>
 
     <style name="Alp.42447968.AOSP.DialogWindowTitle" parent="">
         <item name="android:maxLines">1</item>
