--- a/res/values-v14/styles.xml
+++ b/res/values-v14/styles.xml
@@ -19,30 +19,30 @@
 
     <!-- THEME DARK -->
 
-    <style name="Alp.42447968.BaseTheme.Dark" parent="@android:style/Theme.DeviceDefault" />
+    <style name="Alp_42447968.BaseTheme.Dark" parent="@android:style/Theme.DeviceDefault" />
 
     <!-- THEME LIGHT -->
 
-    <style name="Alp.42447968.BaseTheme.Light" parent="@android:style/Theme.DeviceDefault.Light" />
+    <style name="Alp_42447968.BaseTheme.Light" parent="@android:style/Theme.DeviceDefault.Light" />
 
     <!-- THEME LIGHT, DARK ACTION BAR -->
 
-    <style name="Alp.42447968.BaseTheme.Light.DarkActionBar" parent="@android:style/Theme.DeviceDefault.Light.DarkActionBar" />
+    <style name="Alp_42447968.BaseTheme.Light.DarkActionBar" parent="@android:style/Theme.DeviceDefault.Light.DarkActionBar" />
 
     <!-- THEME DIALOG DARK -->
 
-    <style name="Alp.42447968.BaseTheme.Dialog.Dark" parent="@android:style/Theme.DeviceDefault.Dialog" />
+    <style name="Alp_42447968.BaseTheme.Dialog.Dark" parent="@android:style/Theme.DeviceDefault.Dialog" />
 
     <!-- THEME DIALOG LIGHT -->
 
-    <style name="Alp.42447968.BaseTheme.Dialog.Light" parent="@android:style/Theme.DeviceDefault.Light.Dialog" />
+    <style name="Alp_42447968.BaseTheme.Dialog.Light" parent="@android:style/Theme.DeviceDefault.Light.Dialog" />
 
     <!-- THEME DIALOG WHEN LARGE, LIGHT -->
 
-    <style name="Alp.42447968.BaseTheme.DialogWhenLarge.Light" parent="@android:style/Theme.DeviceDefault.Light.DialogWhenLarge"></style>
+    <style name="Alp_42447968.BaseTheme.DialogWhenLarge.Light" parent="@android:style/Theme.DeviceDefault.Light.DialogWhenLarge"></style>
 
     <!-- THEME DIALOG WHEN LARGE, DARK -->
 
-    <style name="Alp.42447968.BaseTheme.DialogWhenLarge.Dark" parent="@android:style/Theme.DeviceDefault.DialogWhenLarge"></style>
+    <style name="Alp_42447968.BaseTheme.DialogWhenLarge.Dark" parent="@android:style/Theme.DeviceDefault.DialogWhenLarge"></style>
 
 </resources>
