--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -17,13 +17,17 @@
 
 <resources>
 
-    <!-- THEME DARK -->
+    <!-- STYLES -->
 
-    <style name="Alp.42447968.BaseTheme.Dark" parent="@android:style/Theme" />
+    <style name="Alp_42447968"></style>
 
-    <style name="Alp.42447968.BaseThemeHelper.Dark" parent="@style/Alp.42447968.BaseTheme.Dark" />
+    <style name="Alp_42447968.BaseThemeResources" parent="@style/Alp_42447968"></style>
 
-    <style name="Alp.42447968.Theme.Dark" parent="@style/Alp.42447968.BaseThemeHelper.Dark">
+    <!-- THEME RESOURCES DARK -->
+
+    <style name="Alp_42447968.BaseThemeResources.Dark" parent="@style/Alp_42447968.BaseThemeResources"></style>
+
+    <style name="Alp_42447968.ThemeResources.Dark" parent="@style/Alp_42447968.BaseThemeResources.Dark">
 
         <!-- AOSP -->
 
@@ -31,20 +35,18 @@
 
         <!-- android-lockpattern -->
 
-        <item name="alp_42447968_theme_dialog">@style/Alp.42447968.Theme.Dialog.Dark</item>
+        <item name="alp_42447968_theme_dialog">@style/Alp_42447968.Theme.Dialog.Dark</item>
         <item name="alp_42447968_selector_ic_action_lockpattern">@drawable/alp_42447968_selector_ic_action_lockpattern_light</item>
         <item name="alp_42447968_color_lock_pattern_view_regular">@color/alp_42447968_lock_pattern_view_regular_light</item>
         <item name="alp_42447968_color_lock_pattern_view_success">@color/alp_42447968_lock_pattern_view_success_light</item>
         <item name="alp_42447968_color_lock_pattern_view_error">@color/alp_42447968_lock_pattern_view_error_light</item>
     </style>
 
-    <!-- THEME LIGHT -->
+    <!-- THEME RESOURCES LIGHT -->
 
-    <style name="Alp.42447968.BaseTheme.Light" parent="@android:style/Theme.Light" />
+    <style name="Alp_42447968.BaseThemeResources.Light" parent="@style/Alp_42447968.BaseThemeResources"></style>
 
-    <style name="Alp.42447968.BaseThemeHelper.Light" parent="@style/Alp.42447968.BaseTheme.Light" />
-
-    <style name="Alp.42447968.Theme.Light" parent="@style/Alp.42447968.BaseThemeHelper.Light">
+    <style name="Alp_42447968.ThemeResources.Light" parent="@style/Alp_42447968.BaseThemeResources.Light">
 
         <!-- AOSP -->
 
@@ -52,65 +54,42 @@
 
         <!-- android-lockpattern -->
 
-        <item name="alp_42447968_theme_dialog">@style/Alp.42447968.Theme.Dialog.Light</item>
+        <item name="alp_42447968_theme_dialog">@style/Alp_42447968.Theme.Dialog.Light</item>
         <item name="alp_42447968_selector_ic_action_lockpattern">@drawable/alp_42447968_selector_ic_action_lockpattern_dark</item>
         <item name="alp_42447968_color_lock_pattern_view_regular">@color/alp_42447968_lock_pattern_view_regular_dark</item>
         <item name="alp_42447968_color_lock_pattern_view_success">@color/alp_42447968_lock_pattern_view_success_dark</item>
         <item name="alp_42447968_color_lock_pattern_view_error">@color/alp_42447968_lock_pattern_view_error_dark</item>
     </style>
 
-    <!-- THEME LIGHT, DARK ACTION BAR -->
+    <!-- THEME RESOURCES DIALOG DARK -->
 
-    <style name="Alp.42447968.BaseTheme.Light.DarkActionBar" parent="@android:style/Theme.Light" />
+    <style name="Alp_42447968.BaseThemeResources.Dialog" parent="@style/Alp_42447968.BaseThemeResources"></style>
 
-    <style name="Alp.42447968.BaseThemeHelper.Light.DarkActionBar" parent="@style/Alp.42447968.BaseTheme.Light.DarkActionBar" />
+    <style name="Alp_42447968.BaseThemeResources.Dialog.Dark" parent="@style/Alp_42447968.BaseThemeResources.Dialog"></style>
 
-    <style name="Alp.42447968.Theme.Light.DarkActionBar" parent="@style/Alp.42447968.BaseThemeHelper.Light.DarkActionBar">
-
-        <!-- AOSP -->
-
-        <item name="android:windowBackground">@color/alp_42447968_aosp_background_material_light</item>
-
-        <!-- android-lockpattern -->
-
-        <item name="alp_42447968_theme_dialog">@style/Alp.42447968.Theme.Dialog.Light</item>
-        <item name="alp_42447968_selector_ic_action_lockpattern">@drawable/alp_42447968_selector_ic_action_lockpattern_light</item>
-        <item name="alp_42447968_color_lock_pattern_view_regular">@color/alp_42447968_lock_pattern_view_regular_dark</item>
-        <item name="alp_42447968_color_lock_pattern_view_success">@color/alp_42447968_lock_pattern_view_success_dark</item>
-        <item name="alp_42447968_color_lock_pattern_view_error">@color/alp_42447968_lock_pattern_view_error_dark</item>
-    </style>
-
-    <!-- THEME DIALOG DARK -->
-
-    <style name="Alp.42447968.BaseTheme.Dialog.Dark" parent="@android:style/Theme.Dialog">
+    <style name="Alp_42447968.ThemeResources.Dialog.Dark" parent="@style/Alp_42447968.BaseThemeResources.Dialog.Dark">
 
         <!-- AOSP -->
 
         <item name="android:windowBackground">@drawable/alp_42447968_aosp_dialog_full_holo_dark</item>
-    </style>
-
-    <style name="Alp.42447968.BaseThemeHelper.Dialog.Dark" parent="@style/Alp.42447968.BaseTheme.Dialog.Dark" />
-
-    <style name="Alp.42447968.Theme.Dialog.Dark" parent="@style/Alp.42447968.BaseThemeHelper.Dialog.Dark">
 
         <!-- android-lockpattern -->
 
-        <item name="alp_42447968_theme_dialog">@style/Alp.42447968.Theme.Dialog.Dark</item>
+        <item name="alp_42447968_theme_dialog">@style/Alp_42447968.Theme.Dialog.Dark</item>
         <item name="alp_42447968_selector_ic_action_lockpattern">@drawable/alp_42447968_selector_ic_action_lockpattern_light</item>
         <item name="alp_42447968_color_lock_pattern_view_regular">@color/alp_42447968_lock_pattern_view_regular_light</item>
         <item name="alp_42447968_color_lock_pattern_view_success">@color/alp_42447968_lock_pattern_view_success_light</item>
         <item name="alp_42447968_color_lock_pattern_view_error">@color/alp_42447968_lock_pattern_view_error_light</item>
     </style>
 
-    <!-- THEME DIALOG LIGHT -->
+    <!-- THEME RESOURCES DIALOG LIGHT -->
 
-    <style name="Alp.42447968.BaseTheme.Dialog.Light" parent="@android:style/Theme.Light">
+    <style name="Alp_42447968.BaseThemeResources.Dialog.Light" parent="@style/Alp_42447968.BaseThemeResources.Dialog">
 
         <!-- AOSP -->
 
         <item name="android:windowFrame">@null</item>
-        <item name="android:windowTitleStyle">@style/Alp.42447968.AOSP.DialogWindowTitle</item>
-        <item name="android:windowBackground">@drawable/alp_42447968_aosp_dialog_full_holo_light</item>
+        <item name="android:windowTitleStyle">@style/Alp_42447968.AOSP_DialogWindowTitle</item>
         <item name="android:windowIsFloating">true</item>
         <item name="android:windowContentOverlay">@null</item>
         <item name="android:windowAnimationStyle">@android:style/Animation.Dialog</item>
@@ -121,42 +100,105 @@
         <item name="android:colorBackgroundCacheHint">@null</item>
     </style>
 
-    <style name="Alp.42447968.BaseThemeHelper.Dialog.Light" parent="@style/Alp.42447968.BaseTheme.Dialog.Light" />
+    <style name="Alp_42447968.ThemeResources.Dialog.Light" parent="@style/Alp_42447968.BaseThemeResources.Dialog.Light">
 
-    <style name="Alp.42447968.Theme.Dialog.Light" parent="@style/Alp.42447968.BaseThemeHelper.Dialog.Light">
+        <!-- AOSP -->
+
+        <item name="android:windowBackground">@drawable/alp_42447968_aosp_dialog_full_holo_light</item>
 
         <!-- android-lockpattern -->
 
-        <item name="alp_42447968_theme_dialog">@style/Alp.42447968.Theme.Dialog.Light</item>
+        <item name="alp_42447968_theme_dialog">@style/Alp_42447968.Theme.Dialog.Light</item>
         <item name="alp_42447968_selector_ic_action_lockpattern">@drawable/alp_42447968_selector_ic_action_lockpattern_dark</item>
         <item name="alp_42447968_color_lock_pattern_view_regular">@color/alp_42447968_lock_pattern_view_regular_dark</item>
         <item name="alp_42447968_color_lock_pattern_view_success">@color/alp_42447968_lock_pattern_view_success_dark</item>
         <item name="alp_42447968_color_lock_pattern_view_error">@color/alp_42447968_lock_pattern_view_error_dark</item>
     </style>
 
+    <!-- THEME DARK -->
+
+    <style name="Alp_42447968.BaseTheme.Dark" parent="@android:style/Theme" />
+
+    <style name="Alp_42447968.Theme.Dark" parent="@style/Alp_42447968.BaseTheme.Dark">
+
+        <!-- android-lockpattern -->
+
+        <item name="alp_42447968_theme_resources">@style/Alp_42447968.ThemeResources.Dark</item>
+    </style>
+
+    <!-- THEME LIGHT -->
+
+    <style name="Alp_42447968.BaseTheme.Light" parent="@android:style/Theme.Light" />
+
+    <style name="Alp_42447968.Theme.Light" parent="@style/Alp_42447968.BaseTheme.Light">
+
+        <!-- android-lockpattern -->
+
+        <item name="alp_42447968_theme_resources">@style/Alp_42447968.ThemeResources.Light</item>
+    </style>
+
+    <!-- THEME LIGHT, DARK ACTION BAR -->
+
+    <style name="Alp_42447968.BaseTheme.Light.DarkActionBar" parent="@style/Alp_42447968.Theme.Light"></style>
+
+    <style name="Alp_42447968.Theme.Light.DarkActionBar" parent="@style/Alp_42447968.BaseTheme.Light.DarkActionBar">
+
+        <!-- android-lockpattern -->
+
+        <item name="alp_42447968_theme_resources">@style/Alp_42447968.ThemeResources.Light</item>
+    </style>
+
+    <!-- THEME DIALOG DARK -->
+
+    <style name="Alp_42447968.BaseTheme.Dialog.Dark" parent="@android:style/Theme.Dialog"></style>
+
+    <style name="Alp_42447968.Theme.Dialog.Dark" parent="@style/Alp_42447968.BaseTheme.Dialog.Dark">
+
+        <!-- android-lockpattern -->
+
+        <item name="alp_42447968_theme_resources">@style/Alp_42447968.ThemeResources.Dialog.Dark</item>
+    </style>
+
+    <!-- THEME DIALOG LIGHT -->
+
+    <style name="Alp_42447968.BaseTheme.Dialog.Light" parent="@android:style/Theme.Light"></style>
+
+    <style name="Alp_42447968.Theme.Dialog.Light" parent="@style/Alp_42447968.BaseTheme.Dialog.Light">
+
+        <!-- android-lockpattern -->
+
+        <item name="alp_42447968_theme_resources">@style/Alp_42447968.ThemeResources.Dialog.Light</item>
+    </style>
+
     <!-- THEME DIALOG WHEN LARGE, LIGHT -->
 
-    <style name="Alp.42447968.BaseTheme.DialogWhenLarge.Light" parent="@style/Alp.42447968.Theme.Light"></style>
+    <style name="Alp_42447968.BaseTheme.DialogWhenLarge.Light" parent="@style/Alp_42447968.Theme.Light"></style>
 
-    <style name="Alp.42447968.BaseThemeHelper.DialogWhenLarge.Light" parent="@style/Alp.42447968.BaseTheme.DialogWhenLarge.Light"></style>
+    <style name="Alp_42447968.Theme.DialogWhenLarge.Light" parent="@style/Alp_42447968.BaseTheme.DialogWhenLarge.Light">
 
-    <style name="Alp.42447968.Theme.DialogWhenLarge.Light" parent="@style/Alp.42447968.BaseThemeHelper.DialogWhenLarge.Light"></style>
+        <!-- android-lockpattern -->
+
+        <item name="alp_42447968_theme_resources">@style/Alp_42447968.ThemeResources.Light</item>
+    </style>
 
     <!-- THEME DIALOG WHEN LARGE, DARK -->
 
-    <style name="Alp.42447968.BaseTheme.DialogWhenLarge.Dark" parent="@style/Alp.42447968.Theme.Dark"></style>
+    <style name="Alp_42447968.BaseTheme.DialogWhenLarge.Dark" parent="@style/Alp_42447968.Theme.Dark"></style>
 
-    <style name="Alp.42447968.BaseThemeHelper.DialogWhenLarge.Dark" parent="@style/Alp.42447968.BaseTheme.DialogWhenLarge.Dark"></style>
+    <style name="Alp_42447968.Theme.DialogWhenLarge.Dark" parent="@style/Alp_42447968.BaseTheme.DialogWhenLarge.Dark">
 
-    <style name="Alp.42447968.Theme.DialogWhenLarge.Dark" parent="@style/Alp.42447968.BaseThemeHelper.DialogWhenLarge.Dark"></style>
+        <!-- android-lockpattern -->
 
-    <style name="Alp.42447968.AOSP.DialogWindowTitle" parent="">
+        <item name="alp_42447968_theme_resources">@style/Alp_42447968.ThemeResources.Dark</item>
+    </style>
+
+    <style name="Alp_42447968.AOSP_DialogWindowTitle" parent="">
         <item name="android:maxLines">1</item>
         <item name="android:scrollHorizontally">true</item>
         <item name="android:textAppearance">@android:style/TextAppearance.DialogWindowTitle</item>
     </style>
 
-    <declare-styleable name="Alp.42447968.LockPatternView">
+    <declare-styleable name="Alp_42447968.LockPatternView">
 
         <!--
              Aspect to use when drawing LockPatternView. Choices are "square"(default), "lock_width"
@@ -179,5 +221,6 @@
     <attr name="alp_42447968_button_bar_style" format="reference" />
     <attr name="alp_42447968_button_bar_button_style" format="reference" />
     <attr name="alp_42447968_theme_dialog" format="reference" />
+    <attr name="alp_42447968_theme_resources" format="reference" />
 
 </resources>
