--- a/res/values-v11/styles.xml
+++ b/res/values-v11/styles.xml
@@ -17,30 +17,9 @@
 
 <resources>
 
-    <!-- THEME RESOURCES DARK -->
+    <!-- BASE THEME RESOURCES -->
 
-    <style name="Alp_42447968.BaseThemeResources.Dark">
-        <item name="alp_42447968_button_bar_style">?android:attr/buttonBarStyle</item>
-        <item name="alp_42447968_button_bar_button_style">?android:attr/buttonBarButtonStyle</item>
-    </style>
-
-    <!-- THEME RESOURCES LIGHT -->
-
-    <style name="Alp_42447968.BaseThemeResources.Light">
-        <item name="alp_42447968_button_bar_style">?android:attr/buttonBarStyle</item>
-        <item name="alp_42447968_button_bar_button_style">?android:attr/buttonBarButtonStyle</item>
-    </style>
-
-    <!-- THEME RESOURCES DIALOG DARK -->
-
-    <style name="Alp_42447968.BaseThemeResources.Dialog.Dark">
-        <item name="alp_42447968_button_bar_style">?android:attr/buttonBarStyle</item>
-        <item name="alp_42447968_button_bar_button_style">?android:attr/buttonBarButtonStyle</item>
-    </style>
-
-    <!-- THEME RESOURCES DIALOG LIGHT -->
-
-    <style name="Alp_42447968.BaseThemeResources.Dialog.Light">
+    <style name="Alp_42447968.BaseThemeResources" parent="@style/Alp_42447968">
         <item name="alp_42447968_button_bar_style">?android:attr/buttonBarStyle</item>
         <item name="alp_42447968_button_bar_button_style">?android:attr/buttonBarButtonStyle</item>
     </style>
